--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
+
+body {
+    font-family: 'Jost', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -16,7 +22,6 @@
 .App-header {
   background-color: #ffffff;
   min-height: 100vh;
-
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -31,9 +36,10 @@
   }
   to {
     transform: rotate(360deg);
-  }}
+  }
+}
 
-.Bottom{
+.Bottom {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -42,18 +48,19 @@
   margin-top: 50px;
 }
 
-#card-container{
+#card-container {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin-top: 20px;
+  margin: 20px auto 0 auto; /* Centering the container */
+  width: 80%;
 }
 
-#contactFormContainer{
+#contactFormContainer {
   padding-bottom: 50px;
 }
 
-.carouselContainer{
+.carouselContainer {
   padding-top: 50px;
 }
