--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,103 +1,73 @@
 .carousel {
     position: relative;
     width: 80%;
-    max-width: 800px;
+    min-width:fit-content;
+    max-width: 80%;
     height: 400px;
-    margin: auto;
+    margin: 100px auto;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
-    align-items: center;
     justify-content: center;
-  }
-  
-  .carousel-content {
+}
+
+.carousel-content {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-  }
-  
-  .carousel-image {
-    width: 100%;
+    object-fit: cover;
+}
+
+.carousel-image {
+    width: 200%;
     height: 100%;
-    object-fit: cover; /* Ensures the image fills the box while maintaining aspect ratio */
-    border-radius: 10px;
-  }
-  
-  .nav {
-    position: absolute;
+    object-fit: cover; 
+    border-radius: 20px;
+    object-position: top;
+}
+
+.nav {
+ 
     background: none;
     border: none;
     font-size: 24px;
     cursor: pointer;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 10%;
     z-index: 10;
-  }
-  
-  .left {
+}
+
+.left {
+    position: absolute;
     left: 10px;
-  }
-  
-  .right {
+    top: 46%;
+}
+
+.right {
+    position: absolute;
     right: 10px;
-  }
-  
-  .dots {
+    top: 46%;
+}
+
+.dots {
     position: absolute;
     bottom: 10px;
     display: flex;
     gap: 5px;
-  }
-  
-  .dot {
+}
+
+.dot {
     width: 10px;
     height: 10px;
     background-color: #888;
     border-radius: 50%;
     cursor: pointer;
-  }
-  
-  .dot.active {
+}
+
+.dot.active {
     background-color: #000;
-  }
-  
-  .dropdown {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-  }
-  
-  .dropbtn {
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 8px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: black;
-    color: white;
-    min-width: 100px;
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: white;
-    padding: 8px;
-    display: block;
-    text-decoration: none;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
+}
+
