--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,48 +1,48 @@
 .form-container {
-    background: #d3d3d3;
-    padding: 20px;
+    background: #000000;
+    padding: 30px; /* Consistent padding on all sides */
     border-radius: 10px;
     width: 25vw;
-    margin: auto;
-  }
-  
-  .title {
+    margin: 100px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centering the form elements horizontally */
+    justify-content: center;
+}
+
+.title {
     display: flex;
     align-items: center;
     font-size: 20px;
     font-weight: bold;
-  }
-  
-  .circle {
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    border: 2px solid black;
-    margin-right: 8px;
-  }
-  
-  form {
+}
+
+form {
     display: flex;
     flex-direction: column;
-  }
-  
-  label {
-    font-weight: bold;
+    align-items: center; /* Centering the form elements horizontally */
+}
+
+label {
+    font-weight: 200;
+    font-size: 20px;
     margin: 10px 0 5px;
-  }
-  
-  input, textarea {
-    width: 100%;
+    text-align: left;
+    width: 80%; /* Ensuring labels are aligned with input fields */
+}
+
+input, textarea {
+    width: 80%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
-  
-  textarea {
+}
+
+textarea {
     height: 80px;
-  }
-  
-  button {
+}
+
+.submit {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -53,9 +53,9 @@
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
-  }
-  
-  .arrow {
+    width: 85%;
+}
+
+.arrow {
     margin-left: 5px;
-  }
-  
+}
