--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,43 +1,66 @@
 .navbar {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
     background: rgb(255, 255, 255);
     border-bottom: 2px solid black;
-    position: relative;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    max-width: 10%;
     color: black;
-  }
-  
-  .logo {
+    margin: 20px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
     font-size: 20px;
     font-weight: bold;
-  }
-  
-  .menu {
+}
+
+.circle-logo {
+    width: 24px;
+    height: 24px;
+    border: 4px solid black;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.menu {
     cursor: pointer;
     font-size: 18px;
     padding-left: 20px;
-  }
-  
-  .dropdown {
-    top: 40px;
-    right: 10px;
+}
+
+.dropdown {
+    position: absolute;
+    top: 60px;
     background: black;
     color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     padding: 10px;
     border-radius: 5px;
-    max-width: 75px;
-  }
-  
-  .dropdown a {
+    display: none; /* Initially hide the dropdown */
+    margin-left: -15px;
+    max-width: 100%;
+}
+
+.dropdown a {
     color: rgb(255, 255, 255);
     text-decoration: none;
     padding: 5px 0;
-  }
-  
-  .dropdown a:hover {
-    background: gray;
-  }
-  
+    text-align: left;
+}
+
+.dropdown a:hover {
+    color: #ABA8FF;
+}
+
+.menu.open + .dropdown {
+    display: flex; /* Show the dropdown when the menu is open */
+}
